# coffee-machine

./: coffee-sim.cabal
src/app/: Main.hs
src/lib/: BeverageConfig.hs  Cook.hs  Driver.hs  DriverSim.hs  Recipe.hs  Service.hs  Sprites.hs  Widgets.hs
