cabal-version:       >=1.10
name:                coffee-sim
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules:
    HelloWorld
  hs-source-dirs:
    src/lib
  ghc-options: -Wall -O2 -threaded
  build-depends:       base >=4.12 && <4.13
                      ,brick
                      ,raw-strings-qq
                      ,QuickCheck
  default-language:    Haskell2010

executable coffee-sim
  main-is:             Main.hs
  hs-source-dirs:
    src/app
  ghc-options: -Wall -O2 -threaded
  build-depends:       base >=4.12 && <4.13
                      ,coffee-sim
  default-language:    Haskell2010
